--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "url": "https://github.com/ricardolsmendes/access-logs-dw-gcp-js/issues"
   },
   "author": "Ricardo Mendes <ricardolsmendes@gmail.com>",
+  "main": "./src/index.js",
   "scripts": {
     "fix": "eslint --fix **/*.js",
     "lint": "eslint **/*.js",
     "test": "mocha"
   },
-  "main": "index.js",
   "dependencies": {
     "@google-cloud/storage": "^4.1.3",
     "access-logs-parser": "github:ricardolsmendes/access-logs-js-parser",
