--- a/package.json
+++ b/package.json
@@ -14,23 +14,27 @@
   "author": "Ricardo Mendes <ricardolsmendes@gmail.com>",
   "main": "./src/index.js",
   "scripts": {
-    "fix": "eslint --fix **/*.js",
-    "lint": "eslint **/*.js",
-    "test": "mocha"
+    "coverage": "nyc npm test",
+    "fix": "eslint --fix ./src ./test",
+    "lint": "eslint ./src ./test",
+    "test": "mocha --reporter mocha-multi-reporters --reporter-options configFile=./mocha-multi-reporters.json"
   },
   "dependencies": {
-    "@google-cloud/storage": "^4.1.3",
+    "@google-cloud/storage": "^4.2.0",
     "access-logs-parser": "github:ricardolsmendes/access-logs-js-parser",
     "ndjson": "^1.5.0"
   },
   "devDependencies": {
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^6.2.2",
-    "sinon": "^7.5.0"
+    "mocha": "^7.0.0",
+    "mocha-junit-reporter": "^1.23.1",
+    "mocha-multi-reporters": "^1.1.7",
+    "nyc": "^15.0.0",
+    "sinon": "^8.0.2"
   }
 }
